[package]
name = "rito_stats"
version = "0.1.0"
authors = ["Zach Nielsen <zach@zachn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
